# int-robot

./: .gitignore
experiments/: meetingroomposes.txt
experiments/localization/amcl_mcl/orientation/: .~lock.export.csv#  20141104-1521.csv  20141104-1544.csv  export.csv
experiments/socspoioneer/: keyboard_teleop.launch  p2os_laser.launch
report/Assignment 3/: assignment3.tex
report/Call a Meeting Report/: callameeting.tex  refs.bib
src/2dnav/: CMakeLists.txt  move_base_robot.launch  move_base_stage.launch  package.xml  run_robot_nodes.launch  run_stage_nodes.launch
src/2dnav/action/: CMakeLists.txt  navigation.action
src/2dnav/robot_params/: base_local_planner_params.yaml  costmap_common_params.yaml  local_costmap_params.yaml
src/2dnav/stage_params/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
src/call_a_meeting/: CMakeLists.txt  package.xml  robot.launch  simulation.launch
src/call_a_meeting/action/: CheckRoom.action  Localise.action
src/call_a_meeting/scripts/: askserviceclient.py  askserviceserver.py  fsm.py  localiser.py  person_finder.py  room_checker.py  test.py  txttospeech.py
src/call_a_meeting/srv/: Ask.srv
src/ex01/: CMakeLists.txt  package.xml
src/ex01/scripts/: ex01.py  ex01data.py  ex01p2-1.py  ex01p2.py  ex01p2NEW.py
src/leg_detector-master/: package.xml
src/leg_detector-master/src/: leg_detector_node.cpp
src/pf_localisation/: irl.launch  package.xml  simulation.launch
src/pf_localisation/scripts/: experiment.py  node.py  test1.py
www/: index.html
(+60 files in other folders)
